FeedbackDialog -> FeedbackDialogActivity로 변경 후 적용

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,19 @@
 <resources>
 
-    <string name="app_name">Salina Android</string>
+    <string name="app_name">Feedback Dialog</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="salina_fd_tab_question_label">Question</string>
+	<string name="salina_fd_tab_suggestion_label">Suggestion</string>
+	<string name="salina_fd_tab_problem_label">Problem</string>
+	<string name="salina_fd_tab_praise_label">Praise</string>
+	<string name="salina_fd_toast_text">Thank you for your feedback.</string>
+	
+	<string name="have_a_question">Do you have a question?</string>
+	<string name="have_a_suggestion">Do you have a suggestion?</string>
+	<string name="have_a_problem">Do you have a problem?</string>
+	<string name="have_a_praise">Do you have a praise for us?</string>
+	<string name="salina_fd_btSend">Send a Feedback</string>
 
 </resources>
